Hero Styling layout complete

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -10,3 +10,56 @@
 .hero-banner-container .hero-sofa {
   font-size: 1.2rem;
 }
+
+.hero-banner-container h3 {
+  font-size: 4rem;
+  margin-top: 4px;
+}
+.hero-banner-container h1 {
+  color: white;
+  font-size: 10em;
+  margin-left: -20px;
+  text-transform: uppercase;
+}
+.hero-banner-image {
+  position: absolute;
+  top: 0%;
+  right: 20%;
+  width: 450px;
+  height: 450px;
+}
+
+.hero-banner-container button {
+  border-radius: 15px;
+  padding: 0.6em 0.8em;
+  background-color: var(--btn-color);
+  color: var(--header-color);
+  border: none;
+  margin-top: 40px;
+  font-size: 1.2rem;
+  font-weight: 700;
+  cursor: pointer;
+  z-index: 10000 !important;
+}
+
+.desc {
+  position: absolute;
+  right: 10%;
+  bottom: 5%;
+  width: 300px;
+  line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  color: var(--header-color);
+}
+.desc p {
+  color: var(--text-color);
+  font-weight: 400;
+  text-align: end;
+}
+.desc h5 {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 1rem;
+  align-self: flex-end;
+}
