--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -6,6 +6,8 @@
   position: relative;
   height: 500px;
   line-height: 0.9;
+  background-size: cover;
+  background-position: center;
 }
 .hero-banner-container .hero-sofa {
   font-size: 1.2rem;
