--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,13 +1,15 @@
 .hero-banner-container {
   width: 100%;
-  padding: 6.25em 2.5em;
+  padding: 2em 2.5em;
   background-color: var(--card-color);
   border-radius: 15px;
   position: relative;
   height: 500px;
   line-height: 0.9;
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
+  box-shadow: inset 0 0 0 2000px rgba(50, 50, 50, 0.311);
 }
 .hero-banner-container .hero-sofa {
   font-size: 1.2rem;
@@ -16,19 +18,13 @@
 .hero-banner-container h3 {
   font-size: 4rem;
   margin-top: 4px;
+  color: var(--header-color);
 }
 .hero-banner-container h1 {
   color: white;
   font-size: 10em;
   margin-left: -20px;
   text-transform: uppercase;
-}
-.hero-banner-image {
-  position: absolute;
-  top: 0%;
-  right: 20%;
-  width: 450px;
-  height: 450px;
 }
 
 .hero-banner-container button {
@@ -38,15 +34,19 @@
   color: var(--header-color);
   border: none;
   margin-top: 40px;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: 700;
   cursor: pointer;
   z-index: 10000 !important;
 }
 
+.hero-banner-container button:hover {
+  background-color: var(--btn-hover);
+}
+
 .desc {
   position: absolute;
-  right: 10%;
+  right: 2%;
   bottom: 5%;
   width: 300px;
   line-height: 1.3;
@@ -55,12 +55,13 @@
   color: var(--header-color);
 }
 .desc p {
-  color: var(--text-color);
+  color: var(--btn-color);
   font-weight: 400;
   text-align: end;
 }
 .desc h5 {
-  margin-bottom: 12px;
+  color: var(--btn-color);
+  margin: 0;
   font-weight: 700;
   font-size: 1rem;
   align-self: flex-end;
